# AirClass-Hardware

./: BUILD  README.md  airclass_hand_detection_main.cc  combine_landmarks.py  commands  config.txt  distance.py  execute.txt  extract_landmarks.py  gesture_recognizer.keras  main.py  requirements  requirements.txt  scaler.pkl  setup.config  train_model.py  use_model.py  websocket.txt
combined/: merged.py  scaler.pkl  setup.config  use_model.py  websocket.txt
desktop_client/: CMakeLists.txt  desktop_client.cpp
eski/: main.py  websocket.txt
eski/gestures/: gesture_recognition.py
eski/model/keypoint_classifier/: keypoint_classifier_label.csv
gesture_detection/: gesture_recognizer.keras  label_encoder.pkl  scaler.pkl  use_model.py  websocket.txt
hardware_server/: CMakeLists.txt  hardware_client.cpp
hardware_server/server/: websocket_server.cpp
model/keypoint_classifier/: keypoint_classifier_label.csv
server/: CMakeLists.txt  websocket_server.cpp
websocket/: info.txt  use_module.py
websocket/desktop_client/: desktop_test_client  desktop_test_client.cpp
websocket/hardware_client/: CMakeLists.txt  hardware_client.cpp
yeni/: SON.keras  commands  label_encoder.pkl  tfmodel.keras  use_new_model.py
